[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bullet1.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.09186
height = 8.5185

[sub_resource type="CircleShape2D" id=2]
radius = 13.4634

[node name="Bullet" type="RigidBody2D"]
z_index = 1
collision_layer = 128
collision_mask = 37
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.64481, -1.15951 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="DestroyDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyDetector"]
position = Vector2( -1.43394, -1.07546 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.539185, -1.49168 )
scale = Vector2( 0.546082, 0.650832 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DestroyDetector" to="." method="_on_DestroyDetector_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
